[package]
name = "bspipe"
version = "0.3.0"
edition = "2021"

[features]
default = ["default-resolver"]
default-resolver = ["aes-gcm", "chacha20poly1305", "blake2", "sha2", "x25519-dalek", "rand"]

[dependencies]
snow = "0.8"
clap = { version = "3", features = ["cargo"] }
lazy_static = "1.4"

# default crypto provider
aes-gcm = { version = "0.9", optional = true }
chacha20poly1305 = { version = "0.9", optional = true }
blake2 = { version = "0.9", optional = true }
rand = { version = "0.8", optional = true }
sha2 = { version = "0.9", optional = true }
x25519-dalek = { version = "1.1", optional = true }